hphp/hack/test/typecheck/reified_generics/consistent_construct_final_parent.php
<?hh
// Copyright 2004-present Facebook. All Rights Reserved.

<<__ConsistentConstruct>>
class A {
  public function f(): void {
    new static();
  }
}

final class B<reify T> extends A {}
